--- a/web/src/components/BlocksAreaHeader/BlocksAreaHeader.module.scss
+++ b/web/src/components/BlocksAreaHeader/BlocksAreaHeader.module.scss
@@ -44,6 +44,7 @@
             font-size: 1.6rem;
             padding: 0.4rem 2.4rem;
             transition: 300ms;
+            text-decoration: none;
         }
     
         .toggleMenuItem[data-state='on'] {
