--- a/web/src/app/blocos/blocksListStyles.module.scss
+++ b/web/src/app/blocos/blocksListStyles.module.scss
@@ -4,6 +4,7 @@
     max-width: 130rem;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 
 
     main {
@@ -12,11 +13,14 @@
         gap: 2rem;
 
         .blockCard {
-
+            text-decoration: none;
+            color: var(--title-color);
             border: 1px solid #EAEAEA;
             border-radius: 1rem;
             transition: 300ms;
             cursor: pointer;
+            height: fit-content;
+
 
             .blockBanner {
                 width: 100%;
@@ -43,9 +47,12 @@
                 p {
                     color: var(--title);
                     opacity: 0.75;
-                    font-size: 16px;
+                    font-size: 1.6rem;
                     line-height: 160%;
                     font-weight: 400;
+                    max-height: 10rem;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
 
                 .blockLocation {
