--- a/web/src/app/blocos/mapa/blocksMapStyles.module.scss
+++ b/web/src/app/blocos/mapa/blocksMapStyles.module.scss
@@ -1,6 +1,7 @@
-#map {
+#container {
     width: 100%;
-    height: 80rem;
-    background-color: red;
-    border-radius: 0.5rem;
+    border: 1px solid #EAEAEA;
+    height: 42.4rem;
+    border-radius: 5px;
+    background-color: var(--secondary-background-color);
 }
