--- a/web/src/components/BlockMarker/blockMarkerStyles.scss
+++ b/web/src/components/BlockMarker/blockMarkerStyles.scss
@@ -3,23 +3,27 @@
     font-size: 2rem;
     font-weight: 700;
     margin: 0.8rem 1.2rem;
-    display: grid;
-    grid-template-columns: 9fr 1fr;
+    display: flex;
+    flex-direction: column;
 
     p {
         text-overflow: ellipsis;
         overflow: hidden;
     }
+
+    img {
+        border-radius: 0.5rem 0.5rem 0 0;
+    }
     a {
-        width: 4.8rem;
+        width: 100%;
         height: 4.8rem;
         background-color: var(--purple);
-        border-radius: 0.5rem;
         display: flex;
         align-items: center;
         justify-content: center;
         text-decoration: none;
         align-self: center;
+        border-radius: 0 0 0.5rem 0.5rem;
         transition: 300ms;
 
         label {
@@ -29,6 +33,6 @@
     }
 
     a:hover {
-        transform: scale(1.1);
+        opacity: 0.7;
     }
 }
